--- a/src/app/locations/locations.component.less
+++ b/src/app/locations/locations.component.less
@@ -3,151 +3,30 @@ table {
   thead {
     background: #e85524;
     th {
+      text-align: center;
       color: white;
     }
   }
+  tbody {
+    td {
+      border-bottom: 1px solid rgba(119, 119, 119, 0.418);
+      text-align: center;
+    }
+  }
 }
-// .locations {
-//   // .row-flex();
-//   .location:nth-child(odd) {
-//     background: #eee;
-//   }
-//   .location-title {
-//     font-weight: bold;
-//     line-height: 20px;
-//     background: #e85524;
-//     // div {
-//     //   color: #fff;
-//     //   font-size: 1.2em;
-//     //   font-weight: bold;
-//     //   a {
-//     //     color: #fff;
 
-//     //     font-weight: bold;
-//     //   }
-//     // }
-//     // .md-block({
-//     //     display: none!important;
-//     //   });
-//   }
-//   .location,
-//   .location-title {
-//     display: flex // .row-flex();;
-//     // .col();
-//     // .size(12);
-//     // padding: 10px;
-//     // border-bottom: 1px solid #c3c3c3;
-//     // .id-title {
-//     //   .col();
-//     //   .size(2);
-//     //   font-weight: bold;
-//     // }
-//     // .name-title {
-//     //   .col();
-//     //   .size(2);
-//     //   font-weight: bold;
-//     // }
-//     // .total-title {
-//     //   .col();
-//     //   .size(2);
-//     //   font-weight: bold;
-//     // }
-//     // .link-title {
-//     //   .col();
-//     //   .size(1);
-//     // }
-//     // .row-flex();
-//     // .col();
-//     // .size(12);
-//     // padding: 10px;
-//     // .id {
-//     //   .col();
-//     //   .size(2);
-//     // }
-//     // .name {
-//     //   .col();
-//     //   .size(2);
-//     // }
-//     // .total {
-//     //   .col();
-//     //   .size(2);
-//     // }
-//     // .link {
-//     //   .col();
-//     //   .size(1);
-//     // }
-//     // button {
-//     //   cursor: pointer;
-//     // }
-//   }
+.locations {
+  .options {
+    a {
+      padding: 5px;
+      font-size: 1.2em;
+      mat-icon {
+        color: #000;
+      }
+    }
+  }
+}
 
-//   .options {
-//     .col();
-//     .size(12);
-//     .row-flex-no();
-//     justify-content: flex-start;
-//     a {
-//       cursor: pointer;
-//       padding: 10px;
-//       font-size: 1.2em;
-//       mat-icon {
-//         color: #000;
-//       }
-//     }
-//   }
-//   .row-flex();
-// }
-
-// .users-form {
-//   .row-flex();
-//   position: fixed;
-
-//   z-index: 10;
-//   top: 0;
-//   background: #fff;
-//   bottom: 0;
-//   left: 0;
-//   right: 0;
-//   align-content: center;
-//   justify-content: center;
-
-//   .user {
-//     .row-flex();
-//     max-width: 500px;
-//     padding: 10px;
-//     label {
-//       .row-flex();
-//       .col();
-//       .size(12);
-//       padding: 10px;
-//       .row-flex();
-//       flex-wrap: nowrap;
-//       flex-direction: column;
-//       input {
-//         max-width: 300px;
-
-//         font-size: 1.2em;
-//         padding: 10px 10px;
-//         margin: 10px;
-//         border: 2px solid #06b755;
-//         border-radius: 5px;
-//         box-shadow: 3px 2px 1px 0px #ddd;
-//         text-transform: uppercase;
-//       }
-//       .btn {
-//         font-weight: bold;
-//         background: #06b755;
-//         color: #fff;
-//         text-transform: uppercase;
-//         font-size: 1.2em;
-//         padding: 10px 10px;
-//         margin: 10px;
-//         border: 2px solid #06b755;
-//         border-radius: 5px;
-//         box-shadow: 3px 2px 1px 0px #ddd;
-//         text-transform: uppercase;
-//         width: 200px;
-//       }
-//     }
-//   }
-// }
+mat-icon:hover {
+  cursor: pointer !important;
+}
