--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -8,8 +8,8 @@
   <div class="options">
     <a class="action" (click)="resetAllScans()">RESET USER SCANS</a>
     <a class="action" (click)="resetOldScans()">RESET OLD QTY</a>
-    <a class="action" (click)="deleteOldScans()">DELETE OLD QTY AND MODE1 SCANS</a>
-    <a class="action" (click)="deleteMod2Scans()">DELETE MODE2 SCANS</a>
+    <a class="action" (click)="deleteOldScans()">DELETE OLD QTY AND GROUP MODE SCANS</a>
+    <a class="action" (click)="deleteMod2Scans()">DELETE INDIVIDUAL MODE SCANS</a>
     <a class="action" (click)="deleteAll()">DELETE ALL</a>
   </div>
 </div>
