--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,26 +5,26 @@
   </div>
     <ul class="nav">
         <li>
-            <a  class="navLink"  routerLink="/users"><mat-icon class="menuIcon1">person_pin</mat-icon><span>Users</span></a>
+            <a  class="navLink"  routerLink="/users"><mat-icon class="menuIcon1">person_pin</mat-icon><span>Users</span><span class="tooltip">Users</span></a>
         </li>
         <li>
-            <a   class="navLink"  routerLink="/locations" ><mat-icon class="menuIcon1">location_on</mat-icon><span>Locations</span></a>
+            <a   class="navLink"  routerLink="/locations" ><mat-icon class="menuIcon1">location_on</mat-icon><span>Locations</span><span class="tooltip">Locations</span></a>
         </li>
         <li>
-            <a   class="navLink"  routerLink="/barcodes" [queryParams]="{mode:'all'}"><mat-icon class="menuIcon1">airplanemode_active</mat-icon><span>MODE 1/3</span></a>
+            <a   class="navLink"  routerLink="/barcodes" [queryParams]="{mode:'all'}"><mat-icon class="menuIcon1">insert_chart_outlined</mat-icon><span>Group Mode</span><span class="tooltip">Group Mode</span></a>
         </li>
         <li>
-            <a   class="navLink"  routerLink="/barcodes" [queryParams]="{mode:'compare'}"><mat-icon class="menuIcon1">airplanemode_active</mat-icon><span>MODE2</span></a>
+            <a   class="navLink"  routerLink="/barcodes" [queryParams]="{mode:'compare'}"><mat-icon class="menuIcon1">insert_chart_outlined</mat-icon><span>Individual Mode</span><span class="tooltip">Individual Mode</span></a>
         </li>
         <li>
-            <a  class="navLink"  routerLink="/upload"><mat-icon class="menuIcon1">update</mat-icon><span>Upload csv</span></a>
+            <a  class="navLink"  routerLink="/upload"><mat-icon class="menuIcon1">update</mat-icon><span>Data Management</span><span class="tooltip">Data Management</span></a>
         </li>
         <li>
-            <a  class="navLink"  href="../"><mat-icon>youtube_searched_for</mat-icon><span>Scan now</span>
+            <a  class="navLink"  href="../"><mat-icon>youtube_searched_for</mat-icon><span>Scan now</span><span class="tooltip">Scan now</span>
             </a>
         </li>
         <li>
-            <a  class="navLink"  routerLink="/auth"><mat-icon> vpn_key</mat-icon><span>Log Out</span>
+            <a  class="navLink"  routerLink="/auth"><mat-icon> vpn_key</mat-icon><span>Log Out</span><span class="tooltip">Log Out</span>
                 </a>
         </li>
     </ul>
